# cpp-qr

./: .gitignore  CMakeLists.txt  README.md
include/: QrModeSelector.hpp  QrVersionSelector.hpp
src/: QrModeSelector.cpp  QrVersionSelector.cpp  main.cpp
test/unit/: TestQrModeSelector.cpp  TestQrVersionSelector.cpp
test/utils/: QrTestUtils.hpp
